--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name='zd-site-verification' content='wd5oys2bkblxcxekfuwfi' />
+    <meta name='zd-site-verification' content='tn1ldijt558t1887qke4zr' />
     <title>Basic Website</title>
 </head>
 <body>
