--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- navigation for website-->
     <div class="nav-menu">
-        <a href="#about">About Us</a>
+        <a href="https://kuldeep5432.github.io/about.html">About Us</a>
         <a href="#contact">Contact Us</a>
         <a href="#blog">Blog</a>
     </div><br>
