--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Website 2</title>
+    <title>Basic Website XssInArticle<svg/onload=alert(document.location)> 2</title>
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
